index.htmlのアカウント登録ボタン、ログインボタンの修正。bootstrapの学習

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,10 +77,10 @@
           </ul>
         </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="検索" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      <div class="d-flex flex-row">
+      <button class="btn btn-md btn-success mx-2" type="submit">アカウント登録</button>
+      <button class="btn btn-outline-success mx-2" type="submit">ログイン</button>
+      </div>
     </div>
   </div>
 </nav>
