--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -59,19 +59,19 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr style="height: 100px;" th:each="coara : ${coaraList}">
-					<td th:text="${coara.coara_id}"></td>
-					<td th:text="${coara.name}"></td>
-					<td th:if="${coara.is_male == 1}">男</td>
-					<td th:if="${coara.is_male == 0}">女</td>
-					<td th:text="${coara.birthdate}"></td>
-					<td th:if="${coara.is_alive == 1}">生</td>
-					<td th:if="${coara.is_alive == 0}">死亡</td>
-					<td th:text="${coara.deathdate}"></td>
-					<td th:text="${coara.zoo}"></td>
-					<td th:text="${coara.mother}"></td>
-					<td th:text="${coara.father}"></td>
-					<td><a class="btn btn-sm btn-info" th:href="@{/search}">詳細情報</a></td>
+				<tr style="height: 100px;" th:each="coara : ${coaraList}" th:object="${coara}">
+					<td th:text="*{coara_id}"></td>
+					<td th:text="*{name}"></td>
+					<td th:if="*{is_male == 1}">男</td>
+					<td th:if="*{is_male == 0}">女</td>
+					<td th:text="*{birthdate}"></td>
+					<td th:if="*{is_alive == 1}">生</td>
+					<td th:if="*{is_alive == 0}">死亡</td>
+					<td th:text="*{deathdate}"></td>
+					<td th:text="*{zoo}"></td>
+					<td th:text="*{mother}"></td>
+					<td th:text="*{father}"></td>
+					<td><a class="btn btn-sm btn-info" th:href="@{/detail/{coara_id}(coara_id=*{coara_id})}">詳細情報</a></td>
 			</tbody>
 		</table>
 	</div>
