--- a/src/main/resources/templates/insert.html
+++ b/src/main/resources/templates/insert.html
@@ -25,66 +25,72 @@
 <title th:text="${title}">Insert title here</title>
 </head>
 
-<body>
-	<h1 th:text="${title}">タイトル</h1>
-	<!--タイトル名を 変数式でControllerから取得 -->
+		<div th:replace="~{block/header_boot::headerA_boot}"></div>
 
-	<div class="container">
-		<form  action="/insert"  method="post">
-			 <div class="form-group">
-				名前：<input type="text" class="form-control"  name="name" />
-			</div>
-			<div class="form-group">
-			性別：<select name="is_male">
-              		<option th:each="item : ${sexItems}" th:value="${item.key}" th:text="${item.value}">
-              		</option>
-              		</select>
-            </div>
-             <div class="form-group">
-            生死：<select name="is_alive">
-              		<option th:each="item : ${isAliveItems}" th:value="${item.key}" th:text="${item.value}">
-              		</option>
-				  </select>
-			</div>
-			 <div class="form-group">
-			生年月日：<select name="birthYear">
-							  	<option th:each="i : ${#numbers.sequence(1900, 2021)}" th:value="${i}" th:text="${i}"></option>
-							 </select>年
-							<select name="birthMonth">
-								<option th:each="i : ${#numbers.sequence(1, 12)}" th:value="${i}" th:text="${i}"></option>
-							</select>月
-							<select name="birthDay">
-								<option th:each="i : ${#numbers.sequence(1, 31)}" th:value="${i}" th:text="${i}"></option>
-							</select>日
-			</div>
-			<div class="form-group">
-			死亡日：<select name="deathYear">
-							  	<option th:each="i : ${#numbers.sequence(1900, 2021)}" th:value="${i}" th:text="${i}"></option>
-							 </select>年
-							<select name="deathMonth">
-								<option th:each="i : ${#numbers.sequence(01, 12)}" th:value="${i}" th:text="${i}"></option>
-							</select>月
-							<select name="deathDay">
-								<option th:each="i : ${#numbers.sequence(01, 31)}" th:value="${i}" th:text="${i}"></option>
-							</select>日
-			</div>
-			<div class="form-group">
-				動物園：<input type="text" class="form-control"  name="zoo"/>
-			</div>
-			<div class="form-group">
-				母親：<input type="text" class="form-control"  name="mother"/>
-				父親：<input type="text" class="form-control"  name="father"/>
-			</div>
-			 <div class="form-group">
-				詳細：<textarea  class="form-control" name="details"></textarea>
-			</div>
-			<div class="form-group">
-				特徴：<textarea  class="form-control" name="feature"></textarea>
-			</div>
-			<button class="btn btn-outline-primary btn-sm"
-								type="submit">追加</button>
-			</form>	
-	</div>
 
-</body>
+	<body>
+		<h1 th:text="${title}">タイトル</h1>
+		<!--タイトル名を 変数式でControllerから取得 -->
+
+		<div class="container">
+			<form action="/insert" method="post">
+				<div class="form-group">
+					名前：<input type="text" class="form-control" name="name" />
+				</div>
+				<div class="form-group">
+					性別：<select name="is_male">
+						<option th:each="item : ${sexItems}" th:value="${item.key}"
+							th:text="${item.value}"></option>
+					</select>
+				</div>
+				<div class="form-group">
+					生死：<select name="is_alive">
+						<option th:each="item : ${isAliveItems}" th:value="${item.key}"
+							th:text="${item.value}"></option>
+					</select>
+				</div>
+				<div class="form-group">
+					生年月日：<select name="birthYear">
+						<option th:each="i : ${#numbers.sequence(1900, 2021)}"
+							th:value="${i}" th:text="${i}"></option>
+					</select>年 <select name="birthMonth">
+						<option th:each="i : ${#numbers.sequence(1, 12)}" th:value="${i}"
+							th:text="${i}"></option>
+					</select>月 <select name="birthDay">
+						<option th:each="i : ${#numbers.sequence(1, 31)}" th:value="${i}"
+							th:text="${i}"></option>
+					</select>日
+				</div>
+				<div class="form-group">
+					死亡日：<select name="deathYear">
+						<option th:each="i : ${#numbers.sequence(1900, 2021)}"
+							th:value="${i}" th:text="${i}"></option>
+					</select>年 <select name="deathMonth">
+						<option th:each="i : ${#numbers.sequence(01, 12)}" th:value="${i}"
+							th:text="${i}"></option>
+					</select>月 <select name="deathDay">
+						<option th:each="i : ${#numbers.sequence(01, 31)}" th:value="${i}"
+							th:text="${i}"></option>
+					</select>日
+				</div>
+				<div class="form-group">
+					動物園：<input type="text" class="form-control" name="zoo" />
+				</div>
+				<div class="form-group">
+					母親：<input type="text" class="form-control" name="mother" /> 父親：<input
+						type="text" class="form-control" name="father" />
+				</div>
+				<div class="form-group">
+					詳細：
+					<textarea class="form-control" name="details"></textarea>
+				</div>
+				<div class="form-group">
+					特徴：
+					<textarea class="form-control" name="feature"></textarea>
+				</div>
+				<button class="btn btn-outline-primary btn-sm" type="submit">追加</button>
+			</form>
+		</div>
+
+	</body>
 </html>
