リリース前 ver0.1

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -23,18 +23,14 @@
 
 <body>
 		<div th:replace="~{block/header_boot::headerA_boot}"></div>
-
-
-		<h1>コアラ情報詳細</h1>
-		<table th:object="${detail}">
+		<h2>コアラ情報詳細</h2>
+		<table th:object="${detail}" class="table table-hover table-responsive">	
 			<tr>
 				<th class="cell_title">名前</th>
-				<th class="cell_required"></th>
 				<td th:text="*{name}"></td>
 			</tr>
 			<tr>
 				<th class="cell_title">動物園</th>
-				<th class="cell_required"></th>
 				<td th:text="*{zoo}"></td>
 			</tr>
 		</table>
