--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -67,8 +67,8 @@
 						th:object="${coara}">
 						<td th:text="*{coara_id}"></td>
 						<td th:text="*{name}"></td>
-						<td th:if="*{is_male == 1}">男</td>
-						<td th:if="*{is_male == 0}">女</td>
+						<td th:if="*{sex == 1}">男</td>
+						<td th:if="*{sex == 2}">女</td>
 						<td th:text="*{birthdate}"></td>
 						<td th:if="*{is_alive == 1}">生</td>
 						<td th:if="*{is_alive == 0}">死亡</td>
@@ -80,7 +80,6 @@
 							th:href="@{/detail/{coara_id}(coara_id=*{coara_id})}">詳細情報</a></td>
 				</tbody>
 			</table>
-			<a class="btn btn-outline-primary btn-sm" href="/insert">追加</a>
 		</div>
 </body>
 </html>
