--- a/src/main/resources/templates/insert.html
+++ b/src/main/resources/templates/insert.html
@@ -52,7 +52,7 @@
 				<div class="form-group">
 					生年月日：<select name="birthYear">
 						<option th:each="i : ${#numbers.sequence(1900, 2021)}"
-							th:value="${i}" th:text="${i}"></option>
+							th:value="${i}" th:text="${i}" th:selected = "${i}==2000" ></option>
 					</select>年 <select name="birthMonth">
 						<option th:each="i : ${#numbers.sequence(1, 12)}" th:value="${i}"
 							th:text="${i}"></option>
