--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -23,63 +23,63 @@
 
 <body>
 
-		<div th:replace="~{block/header_boot::headerA_boot}"></div>
+	<div th:replace="~{block/header_boot::headerA_boot}"></div>
 
 
-		<div class="container">
+	<div class="container">
 
-			<h2>検索条件</h2>
+		<h2>検索条件</h2>
 
-			<div class="d-flex justify-content-center">
-				<label class="mx-2" for="coara_name">コアラ名:</label> <input
-					class="mx-2" id="coara_name" name="coara_name" type="text">
+		<div class="d-flex justify-content-center">
+			<label class="mx-2" for="coara_name">コアラ名:</label> <input
+				class="mx-2" id="coara_name" name="coara_name" type="text">
 
-				<label class="mx-2" for="zoo_id">動物園名:</label> <input class="mx-2"
-					id="zoo_id" name="zoo_id" type="text">
-			</div>
-			<br>
-			<div class="d-grid col-6 mx-auto">
-				<input class="btn btn-md btn-primary" type="submit" value="検索">
-			</div>
-			<br>
-			<br>
-
-
-			<h2 th:text="${searchResult}">検索結果一覧</h2>
-			<!--タイトル名を 変数式でControllerから取得 -->
-			<table class="table table-hover table-responsive">
-				<thead class="thead-dark">
-					<tr>
-						<th>コアラID</th>
-						<th>コアラ名</th>
-						<th>性別</th>
-						<th>生年月日</th>
-						<th>生死</th>
-						<th>死亡日</th>
-						<th>動物園ID（FK制約）</th>
-						<th>母親（FK制約）</th>
-						<th>父親（FK制約）</th>
-						<th colspan="1"></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr style="height: 100px;" th:each="coara : ${coaraList}"
-						th:object="${coara}">
-						<td th:text="*{coara_id}"></td>
-						<td th:text="*{name}"></td>
-						<td th:if="*{sex == 1}">男</td>
-						<td th:if="*{sex == 2}">女</td>
-						<td th:text="*{birthdate}"></td>
-						<td th:if="*{is_alive == 1}">生</td>
-						<td th:if="*{is_alive == 0}">死亡</td>
-						<td th:text="*{deathdate}"></td>
-						<td th:text="*{zoo}"></td>
-						<td th:text="*{mother}"></td>
-						<td th:text="*{father}"></td>
-						<td><a class="btn btn-sm btn-info"
-							th:href="@{/detail/{coara_id}(coara_id=*{coara_id})}">詳細情報</a></td>
-				</tbody>
-			</table>
+			<label class="mx-2" for="zoo_id">動物園名:</label> <input class="mx-2"
+				id="zoo_id" name="zoo_id" type="text">
 		</div>
+		<br>
+		<div class="d-grid col-6 mx-auto">
+			<input class="btn btn-md btn-primary" type="submit" value="検索">
+		</div>
+		<br> <br>
+
+
+		<h2 th:text="${searchResult}">検索結果一覧</h2>
+		<!--タイトル名を 変数式でControllerから取得 -->
+		<table class="table table-hover table-responsive">
+			<thead class="thead-dark">
+				<tr>
+					<th>コアラID</th>
+					<th>コアラ名</th>
+					<th>性別</th>
+					<th>生年月日</th>
+					<th>生死</th>
+					<th>死亡日</th>
+					<th>動物園ID（FK制約）</th>
+					<th>母親（FK制約）</th>
+					<th>父親（FK制約）</th>
+					<th colspan="1"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr style="height: 100px;" th:each="coara : ${coaraList}"
+					th:object="${coara}">
+					<td th:text="*{coara_id}"></td>
+					<td th:text="*{name}"></td>
+					<td th:if="*{sex == 0}">不明</td>
+					<td th:if="*{sex == 1}">男</td>
+					<td th:if="*{sex == 2}">女</td>
+					<td th:text="*{birthdate}"></td>
+					<td th:if="*{is_alive == 1}">生</td>
+					<td th:if="*{is_alive == 0}">死亡</td>
+					<td th:text="*{deathdate}"></td>
+					<td th:text="*{zoo}"></td>
+					<td th:text="*{mother}"></td>
+					<td th:text="*{father}"></td>
+					<td><a class="btn btn-sm btn-info"
+						th:href="@{/detail/{coara_id}(coara_id=*{coara_id})}">詳細情報</a></td>
+			</tbody>
+		</table>
+	</div>
 </body>
 </html>
