--- a/src/main/resources/templates/insert.html
+++ b/src/main/resources/templates/insert.html
@@ -102,7 +102,14 @@
 
 		<div th:replace="~{block/header_boot::headerA_boot}"></div>
 
+
+	<body>
+		
 	<div class="container">
+	<h1 th:text="${title}">タイトル</h1>
+		<!--タイトル名を 変数式でControllerから取得 -->
+	
+	
 		<form action="/insert" method="post" th:object="${coaraInsertForm}"
 			onsubmit="return validateSubmit(this);">
 			<div class="form-group">
@@ -111,7 +118,7 @@
 				<div class="invalid-feedback" th:errors="*{name}"></div>
 			</div>
 			<div class="form-group">
-				性別：<select th:field="*{is_male}">
+				性別：<select th:field="*{sex}">
 					<option th:each="item : ${sexItems}" th:value="${item.key}"
 						th:text="${item.value}"></option>
 				</select>
@@ -122,26 +129,23 @@
 						th:text="${item.value}"></option>
 				</select>
 			</div>
-			<div class="form-group">
-				生年月日：<select th:field="*{birthYear}">
-					<option value="0">--</option>
-					<option th:each="i : ${#numbers.sequence(1900, 2021)}"
-						th:value="${i}" th:text="${i}"></option>
-				</select>年 <select th:field="*{birthMonth}">
-					<option value="0">--</option>
-					<option th:each="i : ${#numbers.sequence(1, 12)}" th:value="${i}"
-						th:text="${i}"></option>
-				</select>月 <select th:field="*{birthDay}">
-					<option value="0">--</option>
-					<option th:each="i : ${#numbers.sequence(1, 31)}" th:value="${i}"
-						th:text="${i}"></option>
-				</select>日
-			</div>
+					<div class="form-group">
+					生年月日：<select th:field="*{birthYear}">
+						<option th:each="i : ${#numbers.sequence(1900, 2021)}"
+							th:value="${i}" th:text="${i}" ></option>
+					</select>年 <select th:field="*{birthMonth}">
+						<option th:each="i : ${#numbers.sequence(1, 12)}" th:value="${i}"
+							th:text="${i}"></option>
+					</select>月 <select th:field="*{birthDay}">
+						<option th:each="i : ${#numbers.sequence(1, 31)}" th:value="${i}"
+							th:text="${i}"></option>
+					</select>日
+				</div>
 			<div class="form-group">
 				死亡日：<select th:field="*{deathYear}" th:disabled="*{is_alive} == 1">
 					<option value="0">--</option>
 					<option th:each="i : ${#numbers.sequence(1900, 2021)}"
-						th:value="${i}" th:text="${i}"></option>
+						th:value="${i}" th:text="${i}" th:selected = "${i}==2000"></option>
 				</select>年 <select th:field="*{deathMonth}" th:disabled="*{is_alive} == 1">
 					<option value="0">--</option>
 					<option th:each="i : ${#numbers.sequence(01, 12)}" th:value="${i}"
@@ -181,69 +185,7 @@
 		</form>
 	</div>
 
-	<body>
-		<h1 th:text="${title}">タイトル</h1>
-		<!--タイトル名を 変数式でControllerから取得 -->
-
-		<div class="container">
-			<form action="/insert" method="post">
-				<div class="form-group">
-					名前：<input type="text" class="form-control" name="name" />
-				</div>
-				<div class="form-group">
-					性別：<select name="sex">
-						<option th:each="item : ${sexItems}" th:value="${item.key}"
-							th:text="${item.value}"></option>
-					</select>
-				</div>
-				<div class="form-group">
-					生死：<select name="is_alive">
-						<option th:each="item : ${isAliveItems}" th:value="${item.key}"
-							th:text="${item.value}"></option>
-					</select>
-				</div>
-				<div class="form-group">
-					生年月日：<select name="birthYear">
-						<option th:each="i : ${#numbers.sequence(1900, 2021)}"
-							th:value="${i}" th:text="${i}" th:selected = "${i}==2000" ></option>
-					</select>年 <select name="birthMonth">
-						<option th:each="i : ${#numbers.sequence(1, 12)}" th:value="${i}"
-							th:text="${i}"></option>
-					</select>月 <select name="birthDay">
-						<option th:each="i : ${#numbers.sequence(1, 31)}" th:value="${i}"
-							th:text="${i}"></option>
-					</select>日
-				</div>
-				<div class="form-group">
-					死亡日：<select name="deathYear">
-						<option th:each="i : ${#numbers.sequence(1900, 2021)}"
-							th:value="${i}" th:text="${i}"></option>
-					</select>年 <select name="deathMonth">
-						<option th:each="i : ${#numbers.sequence(01, 12)}" th:value="${i}"
-							th:text="${i}"></option>
-					</select>月 <select name="deathDay">
-						<option th:each="i : ${#numbers.sequence(01, 31)}" th:value="${i}"
-							th:text="${i}"></option>
-					</select>日
-				</div>
-				<div class="form-group">
-					動物園：<input type="text" class="form-control" name="zoo" />
-				</div>
-				<div class="form-group">
-					母親：<input type="text" class="form-control" name="mother" /> 父親：<input
-						type="text" class="form-control" name="father" />
-				</div>
-				<div class="form-group">
-					詳細：
-					<textarea class="form-control" name="details"></textarea>
-				</div>
-				<div class="form-group">
-					特徴：
-					<textarea class="form-control" name="feature"></textarea>
-				</div>
-				<button class="btn btn-outline-primary btn-sm" type="submit">追加</button>
-			</form>
-		</div>
-
 	</body>
+
+
 </html>
