追加画面に一覧に戻るボタンを追加

--- a/src/main/resources/templates/insert.html
+++ b/src/main/resources/templates/insert.html
@@ -195,6 +195,7 @@
 				<div class="invalid-feedback" th:errors="*{feature}"></div>
 			</div>
 			<button class="btn btn-outline-primary btn-sm" type="submit">追加</button>
+			<button class="btn btn-outline-danger btn-sm" type="button" onclick="location.href='/search'" >一覧に戻る</button>
 		</form>
 	</div>
 
