生年月日、死亡日を表示する際の月日をゼロ落ちさせる処理追加 それに伴い、こあら追加・編集画面のヴァリデーションを修正

--- a/src/main/resources/templates/insert.html
+++ b/src/main/resources/templates/insert.html
@@ -80,9 +80,9 @@
 			birthFlag = false;
 		}
 		
-		const birthDate = parseInt(birthYear + birthMonth + birthDay);
-		let deathDate = parseInt(deathYear + deathMonth + deathDay);
-		if(deathDate == 000){
+		const birthDate = zeroPadding(birthYear,birthMonth,birthDay);
+		let deathDate = zeroPadding(deathYear,deathMonth,deathDay);
+		if(deathDate == 00000000){
 			deathDate = 99990101;
 		}
 		
@@ -109,6 +109,14 @@
 		} else {
 			return false;
 		}
+	}
+	
+	function zeroPadding(year,month,day) {
+		let intYear = ("0000" + parseInt(year)).slice(-4) ;
+		let intMonth = ("00" + parseInt(month)).slice(-2) ;
+		let intDay = ("00" + parseInt(day)).slice(-2) ;
+		
+		return parseInt(""+intYear+intMonth+intDay);
 	}
 </script>
 </head>
