--- a/src/main/resources/templates/insert.html
+++ b/src/main/resources/templates/insert.html
@@ -20,6 +20,9 @@
 	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 	crossorigin="anonymous">
 
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+
 <!-- Custom styles for this template -->
 <link href="/css/starter-template.css" rel="stylesheet">
 <title th:text="${title}">Insert title here</title>
@@ -33,7 +36,7 @@
 			document.getElementById("deathYear").value = 0;
 			document.getElementById("deathMonth").value = 0;
 			document.getElementById("deathDay").value = 0;
-			
+
 		} else {
 			document.getElementById("deathYear").disabled = false;
 			document.getElementById("deathMonth").disabled = false;
@@ -46,11 +49,11 @@
 
 	function validateSubmit($this) {
 		let nameFlag = true;
-		if(!$this.elements["name"].value){
+		if (!$this.elements["name"].value) {
 			alert('名前を入力してください。');
 			nameFlag = false;
 		}
-		
+
 		const birthYear = $this.elements["birthYear"].value;
 		const birthMonth = $this.elements["birthMonth"].value;
 		const birthDay = $this.elements["birthDay"].value;
@@ -59,81 +62,126 @@
 		const deathDay = $this.elements["deathDay"].value;
 		const birth = [ birthYear, birthMonth, birthDay ];
 		const death = [ deathYear, deathMonth, deathDay ];
-		
+
 		let birthZeroCount = 0;
 		for (let i = 0; i < birth.length; i++) {
 			if (birth[i] == 0) {
 				birthZeroCount++;
 			}
 		}
-		
+
 		let deathZeroCount = 0;
 		for (let i = 0; i < death.length; i++) {
 			if (death[i] == 0) {
 				deathZeroCount++;
 			}
 		}
-		
+
 		let birthFlag = true;
 		if (1 <= birthZeroCount && birthZeroCount <= 2) {
 			alert('生年月日が不正です。');
 			birthFlag = false;
 		}
-		
-		const birthDate = zeroPadding(birthYear,birthMonth,birthDay);
-		let deathDate = zeroPadding(deathYear,deathMonth,deathDay);
-		if(deathDate == 00000000){
+
+		const birthDate = zeroPadding(birthYear, birthMonth, birthDay);
+		let deathDate = zeroPadding(deathYear, deathMonth, deathDay);
+		if (deathDate == 00000000) {
 			deathDate = 99990101;
 		}
-		
+
 		let deathFlag = true;
-		if ((1 <= deathZeroCount && deathZeroCount <= 2) || (birthDate > deathDate)) {
+		if ((1 <= deathZeroCount && deathZeroCount <= 2)
+				|| (birthDate > deathDate)) {
 			alert('死亡日が不正です。');
-			deathFlag = false;	
+			deathFlag = false;
 		}
-		  
+
 		let detailsFlag = true;
-		if(!$this.elements["details"].value){
+		if (!$this.elements["details"].value) {
 			alert('詳細を入力してください。');
 			detailsFlag = false;
 		}
-		
+
 		let featureFlag = true;
-		if(!$this.elements["feature"].value){
+		if (!$this.elements["feature"].value) {
 			alert('特徴を入力してください。');
 			featureFlag = false;
 		}
-		
+
 		if (nameFlag && birthFlag && deathFlag && detailsFlag && featureFlag) {
 			return true;
 		} else {
 			return false;
 		}
 	}
-	
-	function zeroPadding(year,month,day) {
-		let intYear = ("0000" + parseInt(year)).slice(-4) ;
-		let intMonth = ("00" + parseInt(month)).slice(-2) ;
-		let intDay = ("00" + parseInt(day)).slice(-2) ;
-		
-		return parseInt(""+intYear+intMonth+intDay);
+
+	function zeroPadding(year, month, day) {
+		let intYear = ("0000" + parseInt(year)).slice(-4);
+		let intMonth = ("00" + parseInt(month)).slice(-2);
+		let intDay = ("00" + parseInt(day)).slice(-2);
+
+		return parseInt("" + intYear + intMonth + intDay);
 	}
+
+	$(function() {
+		$('.addInputFileButton').click(function(e) {
+			const input = $("#coaraImage").clone(true);
+			const cancelButton = $('#cancelInputFileButton').clone(true);
+			input.val("");
+			input.appendTo("#coaraImages");
+			cancelButton.appendTo("#coaraImages");
+			$("#coaraImages").append("<br>");
+		});
+	});
+	
+	$(function() {
+		$('#cancelInputFileButton').click(function(e) {
+			const contents = $("#coaraImages > input").length;
+			if(contents > 1){
+				$(this).prev().remove();
+				$(this).next().remove();
+				$(this).remove();
+			}else{
+				$(this).prev().val("");
+			}
+		});
+	});	
+
+	$(function() {
+		$('.deleteImageButton').click(function(e) {
+			const deleteImageFalg = confirm('この写真を削除してもよろしいですか？');
+			if (!deleteImageFalg) {
+				return;
+			}
+			let coaraImageId = $(this).parent().attr("id");
+			let deleteIds = $('#deleteCoaraImageFiles').val();
+			if (!deleteIds) {
+				deleteIds = coaraImageId;
+			} else {
+				deleteIds += ',' + coaraImageId;
+			}
+			$('#deleteCoaraImageFiles').val(deleteIds);
+			$(this).parent('span').remove();
+		});
+	});
 </script>
 </head>
 
-		<div th:replace="~{block/header_boot::headerA_boot}"></div>
+<div th:replace="~{block/header_boot::headerA_boot}"></div>
 
 
-	<body>
-		
+<body>
+
 	<div class="container">
-	<h1 th:text="${title}">タイトル</h1>
+		<h1 th:text="${title}">タイトル</h1>
 		<!--タイトル名を 変数式でControllerから取得 -->
-	
-	
-		<form action="/insert" method="post" th:object="${coaraInsertForm}"
+
+
+		<form action="/insert" method="post" enctype="multipart/form-data"
+			th:object="${coaraInsertForm}"
 			onsubmit="return validateSubmit(this);">
-			<input th:unless="*{coara_id}==0" type="hidden" th:field="*{coara_id}">
+			<input th:unless="*{coara_id}==0" type="hidden"
+				th:field="*{coara_id}">
 			<div class="form-group">
 				名前：<input type="text" class="form-control" th:field="*{name}"
 					th:errorclass="is-invalid" />
@@ -151,26 +199,26 @@
 						th:text="${item.value}"></option>
 				</select>
 			</div>
-					<div class="form-group">
-					生年月日：<select th:field="*{birthYear}">
+			<div class="form-group">
+				生年月日：<select th:field="*{birthYear}">
 					<option value="0">--</option>
-						<option th:each="i : ${#numbers.sequence(1900, 2021)}"
-							th:value="${i}" th:text="${i}" ></option>
-					</select>年 <select th:field="*{birthMonth}">
+					<option th:each="i : ${#numbers.sequence(1900, 2021)}"
+						th:value="${i}" th:text="${i}"></option>
+				</select>年 <select th:field="*{birthMonth}">
 					<option value="0">--</option>
-						<option th:each="i : ${#numbers.sequence(1, 12)}" th:value="${i}"
-							th:text="${i}"></option>
-					</select>月 <select th:field="*{birthDay}">
+					<option th:each="i : ${#numbers.sequence(1, 12)}" th:value="${i}"
+						th:text="${i}"></option>
+				</select>月 <select th:field="*{birthDay}">
 					<option value="0">--</option>
-						<option th:each="i : ${#numbers.sequence(1, 31)}" th:value="${i}"
-							th:text="${i}"></option>
-					</select>日
-				</div>
+					<option th:each="i : ${#numbers.sequence(1, 31)}" th:value="${i}"
+						th:text="${i}"></option>
+				</select>日
+			</div>
 			<div class="form-group">
 				死亡日：<select th:field="*{deathYear}" th:disabled="*{is_alive} == 1">
 					<option value="0">--</option>
 					<option th:each="i : ${#numbers.sequence(1900, 2021)}"
-						th:value="${i}" th:text="${i}" th:selected = "${i}==2000"></option>
+						th:value="${i}" th:text="${i}" th:selected="${i}==2000"></option>
 				</select>年 <select th:field="*{deathMonth}" th:disabled="*{is_alive} == 1">
 					<option value="0">--</option>
 					<option th:each="i : ${#numbers.sequence(01, 12)}" th:value="${i}"
@@ -206,13 +254,40 @@
 					th:errorclass="is-invalid"></textarea>
 				<div class="invalid-feedback" th:errors="*{feature}"></div>
 			</div>
-			<button th:if="*{coara_id}==0" class="btn btn-outline-primary btn-sm" type="submit">追加</button>
-			<button th:unless="*{coara_id}==0" class="btn btn-outline-primary btn-sm" type="submit">保存</button>
-			<button class="btn btn-outline-danger btn-sm" type="button" onclick="location.href='/search'" >一覧に戻る</button>
+			<div class="form-group">
+				写真：<br> 
+				<span th:unless="*{coaraImageList.size} == 0"
+					th:each="coaraImage,index:*{coaraImageList}"
+					th:object="${coaraImage}" th:id="*{coaraimage_id} + *{filetype}"
+					style="display: inline-block">
+					<div>
+						<img
+							th:src="@{/images/coara/{coara_id}/{fileName}(coara_id=*{coara_id},fileName=*{coaraimage_id} + *{filetype})}"
+							width="200" height="200">
+					</div>
+					<button class="btn btn-danger btn-sm deleteImageButton"
+						type="button">削除</button>
+				</span>
+				<div id="coaraImages">
+					<input type="file" accept="image/*" th:field="*{coaraImage}"
+						th:errorclass="is-invalid" class="form-control-file"><button class="btn btn-outline-warning btn-sm"
+						id="cancelInputFileButton" type="button">取り消し</button>
+					<br>
+				</div>
+				<button class="btn btn-outline-success btn-sm addInputFileButton"
+					type="button">入力欄追加追加</button>
+			</div>
+			<input type="hidden" th:field="*{deleteCoaraImageFiles}">
+			<button th:if="*{coara_id}==0" class="btn btn-outline-primary btn-sm"
+				type="submit">追加</button>
+			<button th:unless="*{coara_id}==0"
+				class="btn btn-outline-primary btn-sm" type="submit">保存</button>
+			<button class="btn btn-outline-danger btn-sm" type="button"
+				onclick="location.href='/search'">一覧に戻る</button>
 		</form>
 	</div>
 
-	</body>
+</body>
 
 
 </html>
