--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -18,10 +18,10 @@
 
 
 <script type="text/javascript">
-	function deleteFunc(coara_id) {
+	function deleteFunc(koala_id) {
 		const deleteFalg = confirm('このコアラを削除してもよろしいですか？');
 		if(deleteFalg){
-			location.href = '/delete/'+ coara_id;
+			location.href = '/delete/'+ koala_id;
 		}else{
 			return;
 		}
@@ -85,15 +85,15 @@
 			<tr>
 				<th class="cell_title">写真</th>
 				<td>
-					<span th:each="coaraImage,index:*{coaraImageList}" th:object="${coaraImage}">
-					<img th:src="@{/images/coara/{coara_id}/{fileName}(coara_id=${detail.coara_id},fileName=*{coaraimage_id} + *{filetype})}" width="200" height="200">
+					<span th:each="koalaImage,index:*{koalaImageList}" th:object="${koalaImage}">
+					<img th:src="@{/images/koala/{koala_id}/{fileName}(koala_id=${detail.koala_id},fileName=*{koalaimage_id} + *{filetype})}" width="200" height="200">
 					</span>
 				</td>
 			</tr>
 		</table>
 		<div class="btn_area_center">
-			<button class="btn btn-primary btn-sm" type="button" th:onclick="'location.href = \'' +@{/edit/{coara_id}(coara_id=${detail.coara_id})} + '\''" >編集</button>
-			<button class="btn btn-danger btn-sm" type="button" th:onclick="'deleteFunc(' + ${detail.coara_id} + ');'">削除</button>
+			<button class="btn btn-primary btn-sm" type="button" th:onclick="'location.href = \'' +@{/edit/{koala_id}(koala_id=${detail.koala_id})} + '\''" >編集</button>
+			<button class="btn btn-danger btn-sm" type="button" th:onclick="'deleteFunc(' + ${detail.koala_id} + ');'">削除</button>
 			<button class="btn btn-warning btn-sm" type="button" onclick="location.href='/search'" >一覧に戻る</button>
 		</div>
 </body>
