--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>coaraMania</title>
+<title>koalaMania</title>
 
 <link rel="canonical"
 	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
