--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="utf-8">
 
-<title>coaraMania</title>
+<title>koalaMania</title>
 
 <link rel="canonical"
 	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
@@ -31,8 +31,8 @@
 		<h2>検索条件</h2>
 
 		<div class="d-flex justify-content-center">
-			<label class="mx-2" for="coara_name">コアラ名:</label> <input
-				class="mx-2" id="coara_name" name="coara_name" type="text">
+			<label class="mx-2" for="koala_name">コアラ名:</label> <input
+				class="mx-2" id="koala_name" name="koala_name" type="text">
 
 			<label class="mx-2" for="zoo_id">動物園名:</label> <input class="mx-2"
 				id="zoo_id" name="zoo_id" type="text">
@@ -62,10 +62,10 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr style="height: 100px;" th:each="coara : ${coaraList}"
-					th:object="${coara}">
+				<tr style="height: 100px;" th:each="koala : ${koalaList}"
+					th:object="${koala}">
 
-					<td th:text="*{coara_id}"></td>
+					<td th:text="*{koala_id}"></td>
 					<td th:text="*{name}"></td>
 
 					<td th:if="*{sex == 0}">不明</td>
@@ -85,7 +85,7 @@
 					<td th:text="*{mother}"></td>
 					<td th:text="*{father}"></td>
 					<td><a class="btn btn-sm btn-info"
-						th:href="@{/detail/{coara_id}(coara_id=*{coara_id})}">詳細情報</a></td>
+						th:href="@{/detail/{koala_id}(koala_id=*{koala_id})}">詳細情報</a></td>
 			</tbody>
 		</table>
 	</div>
