--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -93,6 +93,10 @@
 	</main>
 	<!-- /.container -->
 
+<script>
+document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +':35729/livereload.js?snipver=2"></' + 'script>')
+</script>
+
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
