コアラ登録の動物園の入力フォーム、バリデーション、SQLなどをデータベースの修正に合わせて改修した。

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -70,7 +70,7 @@
 					<td th:if="*{stringBirthDate.equals('9999年1月1日')}">不明</td>
 					<td th:unless="*{stringBirthDate.equals('9999年1月1日')}"
 						th:text="*{stringBirthDate}"></td>
-					<td th:text="*{zoo}" ></td>
+					<td th:text="*{zooName}" ></td>
 					<td th:text="*{mother}"></td>
 					<td th:text="*{father}"></td>
 					<td><a class="btn btn-md btn-info"
