コアラ詳細画面、編集画面における動物園名を修正

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -67,7 +67,7 @@
 			</tr>
 			<tr>
 				<th class="cell_title">動物園</th>
-				<td th:text="*{zoo}"></td>
+				<td th:text="*{zooName}"></td>
 			</tr>
 			<tr>
 				<th class="cell_title">母親</th>
