developブランチをpullするために、一旦コミット

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -89,6 +89,9 @@
 			</div>
 			<!--end of col-->
 		</div>
+		<a th:href="@{/oauth/twitter/auth}">
+	            <button class="btn btn-info" type="submit">Twitterでログイン</button>
+	        </a>
 
 	</main>
 	<!-- /.container -->
