--- a/src/main/resources/templates/insert.html
+++ b/src/main/resources/templates/insert.html
@@ -174,6 +174,21 @@
 	});
 
 </script>
+
+<script type="text/javascript">
+	function deleteFunc(koala_id,thisButton) {
+		const deleteFalg = confirm('このコアラを削除してもよろしいですか？');
+		if(deleteFalg){
+			thisButton.disabled = true;
+			thisButton.previousElementSibling.disabled = true;
+			thisButton.nextElementSibling.disabled = true;
+			location.href = '/delete/'+ koala_id;
+		}else{
+			return;
+		}
+	}
+</script>
+
 </head>
 
 <div th:replace="~{block/header_boot::headerA_boot}"></div>
@@ -253,10 +268,10 @@
 			</div> -->
 			
 			<div class="form-group">
-				母親：<select th:field ="*{mother}"  th:errorclass="is-invalid"> <!-- id とnameはform用 -->
+				母親：<select th:field ="*{mother_id}"  th:errorclass="is-invalid"> <!-- id とnameはform用 -->
 					<option th:each="mother : ${motherList}"  th:value="${mother.koala_id}"  th:text="${mother.name}" ></option>
 				</select>
-				父親：<select th:field ="*{father}" th:errorclass="is-invalid">
+				父親：<select th:field ="*{father_id}" th:errorclass="is-invalid">
 					<option th:each="father : ${fatherList}"  th:value = "${father.koala_id}"  th:text="${father.name}"></option>
 				</select>
 			</div>
@@ -299,8 +314,8 @@
 				type="submit">追加</button>
 			<button th:unless="*{koala_id}==0"
 				class="btn btn-outline-primary btn-sm" type="submit">保存</button>
-			<button class="btn btn-outline-danger btn-sm" type="button"
-				onclick="location.href='/search'">一覧に戻る</button>
+							<button class="btn btn-danger btn-sm" type="button" th:unless="*{koala_id}==0" th:onclick="'deleteFunc(' + *{koala_id} + ',this);'">削除</button>
+			<button class="btn btn-outline-danger btn-sm" type="button" onclick="location.href='/search'">一覧に戻る</button>
 		</form>
 	</div>
 
