--- a/src/main/resources/templates/block/header_boot.html
+++ b/src/main/resources/templates/block/header_boot.html
@@ -3,9 +3,9 @@
 
 <header th:fragment="headerA_boot">
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 		<div class="container-fluid">
-		
+
 			<a class="navbar-brand" href="#">コアラマニアとは？</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarsExampleDefault"
@@ -20,8 +20,12 @@
 						aria-current="page" href="#">コアラの記録</a></li>
 					<li class="nav-item"><a class="nav-link" href="/insert">新しいコアラの登録</a></li>
 				</ul>
-				
+
 				<div class="d-flex flex-row">
+					<a th:href="@{/oauth/twitter/auth}">
+						<button class="btn btn-info mx-2" type="submit">Twitterでログイン</button>
+					</a>
+
 					<button class="btn btn-md btn-success mx-2" type="submit">アカウント登録</button>
 					<button class="btn btn-outline-success mx-2" type="submit">ログイン</button>
 				</div>
