--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,74 +31,87 @@
 <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#7952b3">
 
-
-<style>
-.bd-placeholder-img {
-	font-size: 1.125rem;
-	text-anchor: middle;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	user-select: none;
-}
-
-@media ( min-width : 768px) {
-	.bd-placeholder-img-lg {
-		font-size: 3.5rem;
-	}
-}
-</style>
-
-
-<!-- Custom styles for this template -->
+<link href="/css/background.css" rel="stylesheet">
 <link href="/css/starter-template.css" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link
+	href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap"
+	rel="stylesheet">
+
 </head>
 
 <body>
-
+	<!-- Masthead-->
+	<header class="masthead">
 		<div th:replace="~{block/header_boot::headerA_boot}"></div>
-	
+		<div class="container-fluid search">
+			<a th:href="@{/search}"></a>
 
-	<main class="container">
+			<div class="row align-items-center text-center">
+				<div class="p-2"></div>
 
-		<div class="text-center">
-			<a th:href="@{/search}"><img alt="bootstrap_test1"
-				class="rounded-circle" th:src="@{/images/001_fuku.jpeg}">
-			</a>
-		</div>
-		<br>
-		<div class="row justify-content-center">
-			<div class="col-12 col-md-10 col-lg-8">
+				<div class="image">
+					<img src="images/title.png" alt="title"
+						class="img-responsive center-block">
+				</div>
 
-				<form class="card-body row no-gutters align-items-center">
-					<div class="col-auto">
-						<i class="fas fa-search h4 text-body"></i>
-					</div>
-					<!--end of col-->
-					<div class="col">
-						<input
-							class="form-control form-control-lg form-control-borderless"
-							type="search" placeholder="コアラ / 動物園 / 都道府県">
-					</div>
-					<!--end of col-->
-					<div class="col-auto">
-						<button class="btn btn-lg btn-success" type="submit">検索</button>
-					</div>
-					<!--end of col-->
+				<div class="discription">
+					<p>コアラのことがもっと好きになるデータベース</p>
+				</div>
 
-				</form>
 			</div>
-			<!--end of col-->
 		</div>
-		<a th:href="@{/oauth/twitter/auth}">
-	            <button class="btn btn-info" type="submit">Twitterでログイン</button>
-	        </a>
 
-	</main>
-	<!-- /.container -->
 
-<script>
-document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +':35729/livereload.js?snipver=2"></' + 'script>')
-</script>
+	</header>
+	<!-- Services-->
+	<section class="page-section" id="services">
+		<div class="container">
+			<br>
+			<h2 class="text-center mt-0">各種機能・新着情報などを以下に表示</h2>
+			<hr class="divider my-4" />
+			<div class="row">
+				<div class="col-lg-3 col-md-6 text-center">
+					<div class="mt-5">
+						<i class="fas fa-4x fa-gem text-primary mb-4"></i>
+						<h3 class="h4 mb-2">Sturdy Themes</h3>
+						<p class="text-muted mb-0">Our themes are updated regularly to
+							keep them bug free!</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 text-center">
+					<div class="mt-5">
+						<i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+						<h3 class="h4 mb-2">Up to Date</h3>
+						<p class="text-muted mb-0">All dependencies are kept current
+							to keep things fresh.</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 text-center">
+					<div class="mt-5">
+						<i class="fas fa-4x fa-globe text-primary mb-4"></i>
+						<h3 class="h4 mb-2">Ready to Publish</h3>
+						<p class="text-muted mb-0">You can use this design as is, or
+							you can make changes!</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 text-center">
+					<div class="mt-5">
+						<i class="fas fa-4x fa-heart text-primary mb-4"></i>
+						<h3 class="h4 mb-2">Made with Love</h3>
+						<p class="text-muted mb-0">Is it really open source if it's
+							not made with love?</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<script>
+		document.write('<script src="http://'
+				+ (location.host || 'localhost').split(':')[0]
+				+ ':35729/livereload.js?snipver=2"></' + 'script>')
+	</script>
 
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
@@ -112,5 +125,6 @@ document.write('<script src="http://' + (location.host || 'localhost').split(':'
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
 		integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
 		crossorigin="anonymous"></script>
+
 </body>
 </html>
